# dns-shop-back

./: .gitignore  docker-compose.yaml  pyproject.toml
app/: initializer.py  main.py
app/config/: __init__.py  _custom.py  local.yaml.tmpl
app/internal/api/v1/: auth.py  router.py  status.py  store.py  user.py
app/internal/core/: auth.py  utils.py
app/internal/core/types/: __init__.py  category.py  enums.py
app/internal/dependencies/: __init__.py  product.py  user.py
app/internal/dto/: auth.py  feedback.py  product.py  user.py
app/internal/repositories/db/: feedback.py  helpers.py  product.py  user.py
app/internal/repositories/db/models/: __init__.py  feedback.py  product.py  schedule.py  user.py
app/internal/services/: user.py
app/tests/unit/test_api/: test_large_request.py
docs/: migrate.md
logs/: access.log.2023-12-12  error.log.2023-12-12  requests.log.2023-12-12
